[package]
name = "day20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aocutil = { version = "0.1.0", path = "../aocutil" }
log = "0.4.20"
nom = "7"

[dev-dependencies]
# pretty_env_logger = "0.5.0"
